--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
   <!-- Main Heading -->
   <h1>History</h1>
 
-  <!-- Bold Text Intro -->
-  <p><b>Main articles:</b> History of blogging and online diary</p>
+  <!-- Bold Text (Not inside its own <p>) -->
+  <b>Main articles:</b> History of blogging and online diary
 
   <!-- First Paragraph -->
   <p>
